tests/functional/data/transpiler/common/errors/shared/applied_to_stmt.err
applied_to_stmt.cpp:5:13: error: 'shared' attribute only applies to variable or type declaration
    5 |             @shared for (int k = 0; k < 10; ++k) {
      |             ^
